--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shenanigans",
+  "name": "@stefanpenner/shenanigans",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
@@ -21,6 +21,9 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "broccoli-merge-trees": "^3.0.2",
+    "broccoli-rollup": "^2.1.1",
+    "calculate-cache-key-for-tree": "^2.0.0",
     "ember-cli-babel": "^7.1.2"
   },
   "devDependencies": {
